# pemdas

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md
src/: main.rs  repl.rs  syntax.rs  text.rs
src/repl/: session.rs  setup.rs
src/syntax/: ast.rs  fixity.rs  lexer.rs  parser.rs  token.rs
src/text/: color.rs  grapheme.rs  lexicon.rs  style.rs  symbol.rs
