[package]
name = "pemdas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "pemdas"
path = "src/main.rs"

[dependencies]
fnv = "1.0.7"
indexmap = "1.9.2"
rustyline = "10.0.0"
default_variant = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.3.0"